--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "The application in this repository simulates one of Credible's main flows, Borrower Prequalification. It consists of a form to collect basic Borrower and Loan information that generates a list of Loans that the Borrower is eligible for from the different Lenders on the platform.",
   "main": "index.js",
   "dependencies": {
-    "babel-core": "^6.22.1",
     "babel": "^6.5.2",
+    "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
     "react": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
@@ -17,7 +19,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js -d"    
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js -d"
   },
   "repository": {
     "type": "git",
