--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
