--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "The application in this repository simulates one of Credible's main flows, Borrower Prequalification. It consists of a form to collect basic Borrower and Loan information that generates a list of Loans that the Borrower is eligible for from the different Lenders on the platform.",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
