--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
