--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
+    "chart.js": "^1.1.1",
     "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-chartjs": "^0.8.0",
