--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router": "^3.0.2",
     "reactable": "^0.14.1",
     "redux": "^3.6.0",
+    "redux-form": "^6.4.3",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0",
     "webpack": "^1.14.0",
