--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js -d"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js -d",
+    "postinstall": "webpack -p --config webpack.prod.config.js"    
   },
   "repository": {
     "type": "git",
